getting back to pristine state

--- a/spec/index.html
+++ b/spec/index.html
@@ -54,5 +54,10 @@
     <script src='lib/Player.js'></script>
     <script src='lib/Game.js'></script>
     <script src='http://code.jquery.com/jquery-2.1.1.min.js'></script>
+    <script>
+      $(document).ready(function(){
+        $('#results').html('Hello World');
+      });
+    </script>
   </body>
 </html>
